Fixed CSS and z-index for footer

--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,8 @@ footer {
   font-size: 10px;
   font-family: Arial;
   text-align: center;
+  position: relative;
+  z-index: 1000; /* Stellen Sie sicher, dass dies hoch genug ist, um über anderen Elementen zu sein */
 }
 
 a {
@@ -80,11 +82,18 @@ a {
   font-size: 15px;
 }
 
+.weather-description {
+  min-width: 250px;
+}
+
 .date,
 .current-condition {
   font-size: 14px;
   padding-bottom: 5px;
-  min-width: 300px;
+}
+
+.current-condition {
+  white-space: nowrap;
 }
 
 span.material-symbols-outlined.location-icon {
@@ -110,24 +119,24 @@ span.material-symbols-outlined.location-icon {
 .min-max-temperature {
   font-size: 16px;
   position: relative;
-  top: -26px;
-  left: 112px;
+  top: 10px;
+  left: -26px;
   opacity: 60%;
 }
 
 .current-weather-container {
-  display: flex; /* Aktiviere Flexbox */
-  justify-content: space-between; /* Verteile den Platz zwischen den Elementen */
+  display: flex;
+  justify-content: space-between;
   max-width: 500px;
   max-height: 200px;
 }
 
 .current-temperature-icon {
-  width: 300px;
+  max-width: 300px;
   height: 300px;
   position: relative;
-  top: -60px;
-  right: -10px;
+  top: -70px;
+  left: -30px;
 }
 
 .humidtity-wind {
@@ -136,7 +145,7 @@ span.material-symbols-outlined.location-icon {
   display: flex; /* Setzt das Element als Flexbox Container */
   align-items: center; /* Zentriert die Inhalte vertikal */
   gap: 5px;
-  padding: 5px 0px;
+  padding: 16px 0px;
 }
 
 .current-humidity {
